--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,6 @@ button:hover {
     button {
         display: block;
         width: 100%;
-        margin-bottom: 10px;
+        margin-bottom: 10px 20px;
     }
     }
