--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,9 @@ button:hover {
     .container {
         width: 100%;
         padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     button {
         display: block;
